kubernetes/rreading-glasses/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rreading-glasses
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: rreading-glasses
      app.kubernetes.io/name: rreading-glasses
      app.kubernetes.io/instance: rreading-glasses
  template:
    metadata:
      labels:
        app: rreading-glasses
        app.kubernetes.io/name: rreading-glasses
        app.kubernetes.io/instance: rreading-glasses
    spec:
      containers:
      - name: rreading-glasses
        image: blampe/rreading-glasses:hardcover@sha256:c58ee6481f05bd2f0f9d356f4b821455509b382cd7df26d810b0143af5de9fe5
        command:
        - /main
        - serve
        - --verbose
        ports:
        - containerPort: 8788
