kubernetes/rreading-glasses/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: rreading-glasses

spec:
  type: ClusterIP
  ports:
  - port: 8788
    targetPort: 8788
    protocol: TCP
    name: http
  selector:
    app: rreading-glasses
