kubernetes/rreading-glasses/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rreading-glasses
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'false'

spec:
  tls:
  - hosts:
    - rreading-glasses.k.oneill.net
    secretName: rreading-glasses-tls
  rules:
  - host: rreading-glasses.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rreading-glasses
            port:
              number: 8788
